# colorink-app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
deploy/: README.md
deploy/systemd/: colorink@.service
src/colorink/: __init__.py  artifacts.py  config.py  db.py  deps.py  dithering.py  epaper_str_enums.py  main.py
src/colorink/api/v1/: devices.py  plugins.py
src/colorink/plugins/: __init__.py  config.py  protocol.py  registry.py
src/colorink/plugins/builtin/: hello.py
src/colorink/plugins/calendar/: __init__.py  config.py  fonts.py  ics.py  layout.py  palette.py  plugin.py  render.py
src/colorink/plugins/calendar/fonts/: OFL.txt
src/colorink/plugins/photoframe/: __init__.py  config.py  plugin.py
src/colorink/plugins/photoframe/img/: .gitignore
src/colorink/services/: generation.py  plugin_config.py
tests/fixtures/: april_2026_test.ics
