[project]
name = "colorink"
version = "0.1.0"
description = "E-paper image plugin service (POC)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "epaper-dithering>=0.6.4",
    "fastapi>=0.115.0",
    "granian>=2.0.0",
    "httpx>=0.28.0",
    "icalendar>=7.0.3",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "recurring-ical-events>=3.8.1",
]

[project.optional-dependencies]
dev = [
    "granian[reload]>=2.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

# Single package index: PyPI. This table has higher priority than `index-url` and takes
# precedence for this project; see: https://docs.astral.sh/uv/reference/settings/#index
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
extend-exclude = ["uv.lock"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.ty]
# ty discovers src/ by default when run from project root
